--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
         <p>Not particularly interesting, but this should display in a web browser</p>
         <h4>By: me</h4>
         <p><a href="gil.html">Gil's page</a></p>
+        <p><a href="info.html">Info's page</a></p>
     </body>
 </html>
