Added anchor tag to index.html

--- a/index.html
+++ b/index.html
@@ -7,5 +7,8 @@
         <p>Not particularly interesting, but this should display in a web browser</p>
         <h4>By: me</h4>
         <p><a href="gil.html">Gil's page</a></p>
+	<p>
+	<a href="https://puginarug.com/">Epic site</a>
+	</p>
     </body>
 </html>
