Change background color

--- a/gil.html
+++ b/gil.html
@@ -2,7 +2,7 @@
     <head>
         <title>Simplest webpage</title>
     </head>
-    <body style="background-color=light-blue">
+    <body style="background-color:Coral;">
         <h1>This Gil's page</h1>
         <p>This is where I can put some information
         <h4>By: Gil</h4>
